# serde_clj

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: convert.rs  de.rs  error.rs  lib.rs  ser.rs
test/: Cargo.toml  bench.sh  test.sh
test/src/: Test.java  bench.clj  lib.rs  test.clj
