[package]
name = "serde_clj"
version = "0.1.1"
authors = ["David <dlesl@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
jni = "0.14.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

