[package]
edition = "2018"
name = "serde_clj"
version = "0.1.1"
license = "MIT"
authors = ["David Leslie"]
homepage = "https://github.com/dlesl/serde_clj"
repository = "https://github.com/dlesl/serde_clj"
description = "Convert Rust data to idiomatic Clojure data using JNI"
exclude = ["test/*"]

[dependencies]
serde = "1.0"
jni = "0.15.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
