[package]
name = "testlib"
version = "0.1.0"
authors = ["David <dlesl@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
jni = "0.14.0"
serde_clj = { path = ".." }
serde_bytes = {version = "0.11"}

[lib]
crate_type = ["cdylib"]

