[package]
name = "testlib"
version = "0.1.0"
authors = ["David <dlesl@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
jni = "0.15.0"
serde_clj = { path = ".." }
serde_bytes = {version = "0.11"}
serde_json = "1.0"
lazy_static = "1.4.0"

[dependencies.json-benchmark]
git = "https://github.com/serde-rs/json-benchmark"
rev = "908f79b"
features = ["file-canada", "lib-serde"]

[lib]
crate_type = ["cdylib"]
